# Jetson-NX_drone_controller

./: .ignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  README.md
cmake/: FindFuzzylite.cmake  FindI2C.cmake  FindJetsonGPIO.cmake  FindSerialport.cmake  deps.cmake
lib/: BMP180.cpp  BMP180.h  CMakeLists.txt
test/: CMakeLists.txt  main.cpp  test_demo.cpp  test_deps1.c  test_deps2.c
util/util1/: .main.cpp.swp  CMakeLists.txt  backupC  main.cpp  test
